--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <form id="reportForm" action="https://formsubmit.co/svajgerramicerik@gmail.com" method="POST" enctype="multipart/form-data">
   
-  <input type="hidden" name="_next" value="https://eriksr2000.github.io/">
+  <input type="hidden" name="_next" value="https://eriksr2000.github.io/PrijavaOkvar/">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
   
