--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <h1>🚧 Prijava okvare stroja</h1>
 
-<form id="reportForm" action="https://formsubmit.co/svajgerramicerik@gmail.com" method="POST" enctype="multipart/form-data">
+<form id="reportForm" action="https://formsubmit.co/elvis.ramic@ggd.si" method="POST" enctype="multipart/form-data">
 
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
