--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <form id="reportForm" action="https://formsubmit.co/elvis.ramic@ggd.si" method="POST" enctype="multipart/form-data">
 
-  <input type="hidden" name="_cc" value="servis@ggd.si">
+  <input type="hidden" name="_cc" value="servis@ggd.si,denis.mulalic@ggd.si">
 
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
