--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <h1>🚧 PRIJAVA OKVARE STROJA</h1>
 
-<form id="reportForm" action="https://formsubmit.co/svajgerramicerik@gmail.com" method="POST" enctype="multipart/form-data">
+<form id="reportForm" action="https://formsubmit.co/elvis.ramic@ggd.si" method="POST" enctype="multipart/form-data">
 
-  <!-- <input type="hidden" name="_cc" value="DRUGI@GMAIL.COM,TRETJI@GMAIL.COM"> -->
+  <input type="hidden" name="_cc" value="servis@ggd.si,denis.mulalic@ggd.si">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
   <input type="hidden" name="_subject" id="emailSubject" value="Nova prijava okvare">
